fix(css): used flexbox to remove visual gap in index page

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,11 @@
 @import "reset.css";
 @import "semantics.css";
 
+main {
+    display: flex;
+    flex-direction: column;
+}
+
 main p:first-child {
     padding: 0.8% 0% 0.8% 7%;
     background-color: #21242d;
@@ -9,6 +14,8 @@ main p:first-child {
 }
 
 main section {
+    flex-grow: 1;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,6 +26,7 @@ main section {
     background-size: cover;
     background-repeat: no-repeat;
 
+    height: auto;
     min-height: 80vh;
 
     color: #ffff;
